--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 </form>
                 <div class="heder">
                   <a class="footer-brand mx-2 fs-3 druga" href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-                  <a class="footer-brand mx-2 fs-3 druga" href="#" target="_blank"><i class="bi bi-github"></i></a>
+                  <a class="footer-brand mx-2 fs-3 druga" href="https://github.com/ninanikolic19/FluffyFortress" target="_blank"><i class="bi bi-github"></i></a>
                   <a class="footer-brand mx-2 fs-3 prva" href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                   <a class="footer-brand mx-2 fs-3 prva" href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
                 </div>
